# kelo_tulip

./: .clang-format  CMakeLists.txt  README.md  package.xml
config/: example.yaml  gz_controller.yaml
include/kelo_tulip/: EtherCATModuleROS.h  KeloDrive.h  KeloDriveAPI.h  PlatformController.h  PlatformControllerGZ.hpp  PlatformDriver.h  PlatformDriverROS.h  PlatformToWheelInverseKinematicsSolver.h  Structs.h  VelocityPlatformController.h  WheelConfig.h
include/kelo_tulip/modules/: PowerManagementUnit.h  PowerManagementUnitROS.h  RobileMasterBattery.h  RobileMasterBatteryROS.h
launch/: example.launch.py  kelo_platform_controller_gz.launch.py
src/: EtherCATMaster.cpp  EtherCATModuleROS.cpp  KELORobotKinematics.c  KeloDrive.cpp  PlatformController.cpp  PlatformControllerGZ.cpp  PlatformDriver.cpp  PlatformDriverROS.cpp  PlatformToWheelInverseKinematicsSolver.c  SmartWheelKinematics.c  TulipMain.cpp  VelocityPlatformController.cpp  platform_controller_gz.cpp
src/modules/: PowerManagementUnit.cpp  PowerManagementUnitROS.cpp  RobileMasterBattery.cpp  RobileMasterBatteryROS.cpp
